--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=account-management-service
+
+spring.cloud.config.import-check.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+management.tracing.sampling.probability=1.0 
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
