--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-
+eureka.instance.prefer-ip-address=true
 spring.cloud.config.import-check.enabled=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 management.tracing.sampling.probability=1.0 
