--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=sonal
 eureka.instance.prefer-ip-address=true
 spring.cloud.config.import-check.enabled=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
