--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,7 @@
-
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=root
+spring.datasource.password=root
 eureka.instance.prefer-ip-address=true
 spring.cloud.config.import-check.enabled=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
