--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=root
