--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=account
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
