--- a/application.properties
+++ b/application.properties
@@ -2,7 +2,7 @@ spring.application.name=account
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=root
+spring.datasource.username=root1
 spring.datasource.password=root
 eureka.instance.prefer-ip-address=true
 spring.cloud.config.import-check.enabled=false
